--- a/src/pages/schedule.css
+++ b/src/pages/schedule.css
@@ -50,3 +50,26 @@ section p {
   letter-spacing: 1px;
   margin-bottom: 40px;
 }
+
+.schedule .filters {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 10px;
+  margin-top: 50px;
+}
+
+.schedule .filters li {
+  color: #ffffff;
+  padding: 10px 25px;
+  background: #191919;
+  transition: 0.3s;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.schedule .filters li.active,
+.schedule .filters li:hover,
+.schedule .filters li:active {
+  background: var(--primary);
+}
